feat(epic-353): remove ROLE_ORG_* authorities and MemberSyncService role sync (#682)
Remove dead ROLE_ORG_* Spring Security authorities now that all authorization
uses @RequiresCapability. Strip authority grants from ClerkJwtAuthenticationConverter,
remove AUTHORITY_ORG_* constants from Roles.java, clean 176+ test files of
.authorities() calls, and remove role sync from MemberSyncService webhook path
(retaining identity sync for name/email/avatar). Also fix pre-existing bugs:
org:admin slugs in acceptance tests and Member constructor type mismatch in
InvitationServiceTest.

Co-authored-by: Claude Opus 4.6 (1M context) <noreply@anthropic.com>