@@ -16,7 +16,7 @@ import io.b2mash.b2b.b2bstrawman.provisioning.TenantProvisioningService;
 import io.b2mash.b2b.b2bstrawman.testutil.TestCustomerFactory;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
-import java.util.List;
+import java.util.Collections;
 import java.util.UUID;
 import java.util.concurrent.Callable;
 import org.junit.jupiter.api.AfterEach;
@@ -27,7 +27,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.context.annotation.Import;
 import org.springframework.security.authentication.TestingAuthenticationToken;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.transaction.support.TransactionTemplate;
@@ -340,8 +339,7 @@ class RetentionServiceTest {
 
   private <T> T runInTenant(Callable<T> callable) {
     var auth =
-        new TestingAuthenticationToken(
-            "user_retention_svc_test", null, List.of(new SimpleGrantedAuthority("ROLE_ORG_OWNER")));
+        new TestingAuthenticationToken("user_retention_svc_test", null, Collections.emptyList());
     SecurityContextHolder.getContext().setAuthentication(auth);
 
     return ScopedValue.where(RequestScopes.TENANT_ID, tenantSchema)
